--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,4 +1,5 @@
 <h3>mini-talk-app</h3>
+<%= link_to "仮のボタンです", "#", class: "btn btn-primary" %>
 <%= form_with model: @message do |f| %>
   <%= f.text_field :text %>
   <%= f.submit '送信' %>
